examples/test/testpolicy18902.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18902
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key42: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value19
          key12: value26
          key20: value43
      podSelector:
        matchLabels:
          key23: value19
          key44: value28
          key47: value42
